# chroma-oracle

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml  setup.py
.github/workflows/: docker-publish.yml  tests.yml
chroma_oracle/: __init__.py  __main__.py  interactive_strategy.py
chroma_oracle/cli/: main.py  printing.py  simulation.py
chroma_oracle/lib/: collection.py  colour.py  container.py  file2collection.py  item.py  json2collection.py  move.py  search.py  strategy.py  unknown_solver.py
scripts/: docker-run.sh
solver/: __init__.py  __main__.py  guess.py  interactive_strategy.py  match_steps.py  win_strategy.py
solver/cli/: main.py  printing.py  simulation.py
solver/lib/: collection.py  colour.py  container.py  file2collection.py  item.py  json2collection.py  move.py  search.py  strategy.py  unknown_solver.py
tests/cli/: test_main.py  test_match_steps.py  test_printing.py
tests/lib/: test_collection.py  test_container.py  test_item.py  test_json2collection.py  test_move.py  test_search.py  test_unknown_solver.py
