[project]
name = "colour-puzzle-solver"
version = "0.1.0"
description = "A solver for colour sorting puzzle games"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=7.1.2",
    "sty>=1.0.0b12",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
]

[tool.black]
line-length = 79
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.vscode
    | \.mypy_cache
    | \env
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
