[project]
name = "chroma-oracle"
version = "1.0.0"
description = "A colour sorting puzzle solver with mystery guessing capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=7.1.2",
    "sty>=1.0.0b12",
]

[project.scripts]
chroma-oracle = "solver.cli.main:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*", "tests"]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    "types-setuptools",
]

[tool.black]
line-length = 80
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.vscode
    | \.mypy_cache
    | env
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
