[project]
name = "chroma-oracle"
version = "1.0.0"
description = "A colour sorting puzzle solver with mystery guessing capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=7.1.2",
    "sty>=1.0.0b12",
]

[project.scripts]
chroma-oracle = "chroma_oracle.cli.main:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*", "tests"]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "types-setuptools",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex (let's be lenient)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["chroma_oracle"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
